# Team-Empire-BOS-

./: .coveragerc  .dockerignore  .env.empireo  .env.example  .env.nidin  .env.production.example  .eslintrc.cjs  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  CODEBASE_MAP.md  CURRENT_TASK.md  CUSTOMIZATION_GUIDE.md  DECISIONS.md  Dockerfile  Makefile  PROJECT_CONTEXT.md  QUALITY_CHECKLIST.md  STAGING_DEPLOYMENT_RUNBOOK.md  STAGING_VERIFICATION_NOTES.md  alembic.ini  docker-compose.yml  gunicorn.conf.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  pytest.ini  readme.md  requirements-dev.txt  requirements.txt  run_scheduler.py  run_webhook_worker.py  staging_migration.sql  staging_seed_users.sql  start-local.ps1
.github/: CODEOWNERS  labeler.yml  pull_request_template.md
Engine/: run.bat
alembic/: env.py
app/: main.py
artifacts/: ci-risk-report.json  ci-risk-report.md
crm-backend/: .env.example  .gitignore  alembic.ini  requirements.txt
deploy/: deploy.sh  env.empireoe.example  env.personal.example  journald.conf  nginx-empireoe.conf  nginx-personal.conf  nidin-bos-scheduler.service  nidin-bos.service  nidin-nover-ai-scheduler.service  nidin-nover-ai.service  personal-clone.service  restore-db.sh  setup-server.sh
docs/: ADR_0001_MODULAR_MONOLITH_INTELLIGENCE_LOOP.md  AGENT_ORCHESTRATION.md  ARCHITECTURE_CONVENTIONS.md  ARCHITECTURE_PLAN_NEXT_PHASE.md  C4_ARCHITECTURE.md  (+51 more)
sdk/python/: README.md  pyproject.toml
sdk/python/nidin_bos_sdk/: __init__.py  client.py  errors.py  models.py
(+1541 files in other folders)
