[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nidin-bos-sdk"
version = "0.7.0"
description = "Official Python SDK for Nidin BOS API v1"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27.0"]

[tool.setuptools.packages.find]
include = ["nidin_bos_sdk*"]
